--- a/week09/server/package.json
+++ b/week09/server/package.json
@@ -4,7 +4,7 @@
   "description": "web class",
   "license": "ISC",
   "author": "",
-  "type": "commonjs",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon app.js",
