email unique index

--- a/Week11/docker/mongo-data/.mongodb/mongosh/config
+++ b/Week11/docker/mongo-data/.mongodb/mongosh/config
@@ -1,1 +1,1 @@
-{"userId":"6923d4e2be18497b049dc29b","telemetryAnonymousId":"6923d4e2be18497b049dc29b","enableTelemetry":true}
+{"userId":"6929a2a94d620c23b29dc29b","telemetryAnonymousId":"6929a2a94d620c23b29dc29b","enableTelemetry":true,"disableGreetingMessage":true}
